# OADP

./: .codespellrc  .flake8  .gitignore  .pre-commit-config.yaml  .todd_version  LICENSE  Pipfile  README.md  coop.py  json_parser.py  makefile  package.json  pyproject.toml  requirements.txt  setup.sh  train.py  train_clip.py  train_clip_448.py  validate.py  validate_clip.py  validate_resnet.py
.github/workflows/: lint.yaml  test.yaml
cafe/: __init__.py  classifier.py  classifiers.py  datasets.py  detectors.py  necks.py  patches.py  roi_heads.py  test_multilabel_fusion.py  test_multilabel_fusion_lvis.py
clip/: clip.py  model.py
configs/: clip.py  extract_embeddings.py  extract_patch_features.py  image_refiner.py  prompt.py  prompt_patched.py
configs/dp/: base.py  fs_coco.py  fs_lvis.py  oadp_fs_coco.py  oadp_fs_lvis.py  oadp_object365.py  oadp_ov_coco.py  oadp_ov_coco_llm.py  oadp_ov_lvis.py  oadp_ov_object365.py  object_block_global_coco_48_17.py  object_block_global_ov_coco.py  ov_lvis.py  ov_mixed.py  ov_object365.py  ov_v3det.py  runtime.py  vild_coco.py
configs/faster_rcnn/: custom.py  faster_rcnn_r50_fpn_1x_coco.py
configs/mldec/: extract_embeddings.py  extract_mask_embedding.py  extract_mask_embeddings.py  extract_vild_embeddings.py  gen_lvis_pl_on_coco.py  gen_lvis_pl_on_lvis.py  gen_novel_pl_on_coco.py  gen_pl_by_classnames.py  gen_vild_pl_on_coco.py  gt_mask_extractor.py  gt_vild_extractor.py  lvis_prompt.py  mask_extractor.py  mask_prompt.py  prompt.py  prompt_dump.py
configs/oake/: base.py  blocks.py  blocks_cuda.py  clip_blocks_cuda.py  clip_globals_cuda.py  clip_objects_cuda.py  coco_blocks_cuda.py  coco_globals_cuda.py  coco_objects_cuda.py  dino_blocks_cuda.py  dino_globals_cuda.py  dino_objects_cuda.py  globals.py  globals_.py  globals_cuda.py  images.py  interface.py  lvis_objects_cuda.py  objects.py  objects365_blocks.py  objects365_blocks_cuda.py  objects365_globals.py  objects365_globals_cuda.py  objects365_objects_cuda.py  objects_coco.py  objects_cuda.py  objects_lvis.py  ram_cuda.py
configs/pl/: gen_lvis_pl_on_coco.py  gen_novel_pl_on_coco.py
configs/strategies/: base.py  cuda.py  ddp.py  find_unused_parameters.py  fsdp.py  interface.py
configs_mmdet3/dp/: base.py  vild_ov_coco.py
data/: prompts
mldec/: __init__.py  coop.py  datasets.py  debug.py  extract_caption_embeddings.py  extract_embeddings.py  extract_mask_embedding.py  extract_mask_embeddings.py  extract_patch_features.py  extract_vild_embeddings.py  faster_rcnn.py  gen_lvis_pl_on_coco.py  gen_lvis_pl_on_lvis.py  gen_novel_pl_on_coco.py  gen_pl_by_classnames.py  gen_vild_pl_on_coco.py  gt_mask_extractor.py  gt_vild_extractor.py  helper_functions.py  image_refiner.py  losses.py  mask_extractor.py  mask_prompt.py  prompt.py  runner.py  spatial_vit.py  test_gen_pl_v2_custom_dataset_train.py  test_gen_pl_v2_custom_dataset_train_eva.py  test_lvis_pl_on_coco.py  test_novel_pl_on_coco.py  test_vild_pl_on_coco.py  todd.py  utils.py  vild_prompt.py
oadp/: __init__.py  build_annotations.py  patches.py  registries.py  test.py
oadp/base/: __init__.py  datasets.py  debug.py  globals_.py  losses.py  misc.py  odps.py  stores.py  utils.py
oadp/categories/: __init__.py  constants.py  errors.py  registries.py
oadp/dp/: __init__.py  bbox_heads.py  classifiers.py  datasets.py  detectors.py  inference.py  plot.py  plot_utils.py  registries.py  roi_heads.py  runners.py  test.py  test_nni.py  train.py  train_mmdet3.py  utils.py
scripts/: train.sh  train1.sh  train2.sh  train3.sh  train4.sh  train5.sh
src_files/: debug.py  helper_functions.py
tools/: build_annotations.py  build_lvis_annotations.py  build_pl.py  build_prompts.py  conceptnet.py  dist_train.sh  dump_coco.patch  encode_sample_images.py  extract_patch_features.py  filter_annotations.py  generate_sample_images.py  inference_clip.py  inference_clip_patch.py  inference_clip_patch_prompt.py  inference_clip_patch_prompt_vis.py  k8s_extract_mask_embeddings.sh  k8s_extract_vild_embeddings.sh  k8s_test.sh  k8s_train.sh  lvis_vis.py  nni_dp_test.py  nni_test_gen_pl_v2_custom_dataset_train.py  nni_test_multilabel_fusion.py  odps_extract_mask_embeddings.py  odps_extract_mask_embeddings.sh  odps_test.sh  odps_test_multilabel.sh  odps_train.sh  pai.sh  parse_test_result.py  sample_visual_category_embeddings.py  temp_vis.py  test.py  test_multilabel.py  test_regionclip.py  torchrun.sh  train.py  val.py  validate.py  visualize_coco_48_17.py  (+1 more)
(+254 files in other folders)
