[project]
name = 'OADP'
description = 'Object-Aware Distillation Pyramid for Open-Vocabulary Detection'
readme = 'README.md'

[project.license]
file = 'LICENSE'

[[project.authors]]
name = 'Luting Wang'
email = 'wangluting@buaa.edu.cn'

[project.urls]
Homepage = 'https://github.com/LutingWang/OADP'

[tool.yapf]
allow_split_before_dict_value = false
coalesce_brackets = true
dedent_closing_brackets = true
split_arguments_when_comma_terminated = true
split_complex_comprehension = true
split_before_arithmetic_operator = true

[tool.isort]
profile = 'hug'
src_paths = [
    'oadp',
    'tools',
]
line_length = 79
multi_line_output = 3

[tool.pydocstyle]
convention = 'google'

[tool.mypy]
files = [
    'oadp',
    'tools',
]

[tool.codespell]
write-changes = true

[tool.commitizen]
name = 'cz_conventional_commits'

[odps]
# workbench = 'imac_dev'
workbench = 'search_algo_quality_dev'

[odps.pai]
name = 'pytorch180'
oversubscription = false
entry_file = 'tools/test.py'
worker_count = 1
user_defined_parameters = [
    'configs/dp/object_block_global_coco_48_17.py',
    'work_dirs/object_block_global_coco_48_17/iter_32000.pth',
    '--launcher pytorch',
]

[odps.pai.buckets]
scheme = 'oss'
netloc = 'mvap-data'
path = '/zhax/wangluting/'
fragment = ''

[odps.pai.buckets.query]
# role_arn = 'acs:ram::1367265699002728:role/imac4pai'
role_arn = 'acs:ram::1367265699002728:role/searchalgo4pai'
host = 'cn-zhangjiakou.oss.aliyuncs.com'

[odps.pai.script]
name = 'oadp'
files = [
    'configs',
    'oadp',
    'tools',
    'requirements.txt',
]
filters = [
    '__pycache__',
]
