[project]
name = 'OADP'
description = 'Object-Aware Distillation Pyramid for Open-Vocabulary Detection'
readme = 'README.md'

[project.license]
file = 'LICENSE'

[[project.authors]]
name = 'Luting Wang'
email = 'wangluting@buaa.edu.cn'

[project.urls]
Homepage = 'https://github.com/LutingWang/OADP'

[tool.yapf]
allow_split_before_dict_value = false
coalesce_brackets = true
dedent_closing_brackets = true
split_arguments_when_comma_terminated = true
split_complex_comprehension = true
split_before_arithmetic_operator = true

[tool.isort]
profile = 'hug'
src_paths = [
    'oadp',
    'tools',
]
line_length = 79
multi_line_output = 3
known_third_party = [
    'nni',
]

[tool.pydocstyle]
convention = 'google'

[tool.mypy]
files = [
    'oadp',
    'tools',
]
plugins = 'numpy.typing.mypy_plugin'

[tool.codespell]
write-changes = true

[tool.commitizen]
name = 'cz_conventional_commits'
