[project]
name = 'OADP'
description = 'Object-Aware Distillation Pyramid for Open-Vocabulary Detection'
readme = 'README.md'
requires-python = '>=3.11'

[project.license]
file = 'LICENSE'

[[project.authors]]
name = 'Luting Wang'
email = 'wangluting@buaa.edu.cn'

[project.urls]
Homepage = 'https://github.com/LutingWang/OADP'

[tool.autoflake]
in-place = true

[tool.yapf]
allow_split_before_dict_value = false
coalesce_brackets = true
dedent_closing_brackets = true
split_arguments_when_comma_terminated = true
split_complex_comprehension = true
split_before_arithmetic_operator = true

[tool.isort]
extra_standard_library = [
    'typing_extensions',
]
profile = 'hug'
src_paths = [
    'oadp',
    'tools',
]
line_length = 79
multi_line_output = 3

[tool.pydocstyle]
convention = 'google'
add-ignore = 'D100,D101,D102,D103,D104,D105,D106,D107'

[tool.mypy]
files = [
    'oadp',
    'tools',
]
plugins = 'numpy.typing.mypy_plugin'

[[tool.mypy.overrides]]
module = [
    'lvis.*',
    'mmdet.*',
    'nltk.*',
]
ignore_missing_imports = true

[tool.codespell]
write-changes = true
skip = '*.json'

[tool.commitizen]
name = 'cz_conventional_commits'

[tool.pylint.'messages control']
disable = [
    'attribute-defined-outside-init',
    'cyclic-import',
    'design',
    'eval-used',
    'exec-used',
    'fixme',
    'import-outside-toplevel',
    'missing-module-docstring',
    'missing-class-docstring',
    'missing-function-docstring',
    'not-callable',
    'protected-access',
    'unspecified-encoding',
    'unused-argument',
    'use-dict-literal',
    'use-list-literal',

    'using-constant-test',
]
enable = [
    'useless-suppression',
]

[tool.pylint.typecheck]
generated-members = [
    'torch.*',
]

[tool.pylint.format]
expected-line-ending-format = 'LF'
max-line-length = 79

[tool.bandit]
skips = [
    'B101',
]
